make get config values from config dictionaries

--- a/app/templates/frontend/home/home.html
+++ b/app/templates/frontend/home/home.html
@@ -1,4 +1,6 @@
 {% extends "frontend/layout/layout.html" %}
 {% block content %}
+	<h4>Page title from view file: {{ title }}</h4>
+	<h4>App name from config in html file: {{ config['APP_NAME'] }}</h4>
     <h2>{{ message }}</h2>
 {% endblock %}
