add dashboard blueprint

--- a/app/templates/backend/dashboard/dashboard.html
+++ b/app/templates/backend/dashboard/dashboard.html
@@ -1,6 +1,5 @@
 {% extends "layout/layout.html" %}
-
 {% block content %}
-    <h2>403</h2>
-    {{ desc }}
+	<h4>Admin Dashboard Page</h4>
+    <h2>{{ message }}</h2>
 {% endblock %}
