--- a/app/templates/frontend/home/home.html
+++ b/app/templates/frontend/home/home.html
@@ -1,4 +1,4 @@
-{% extends "frontend/layout/layout.html" %}
+{% extends "layout/layout.html" %}
 {% block content %}
 	<h4>Page title from view file: {{ title }}</h4>
 	<h4>App name from config in html file: {{ config['APP_NAME'] }}</h4>
